@@ -574,6 +574,7 @@ ssize_t Write(int fd, const void *buf, size_t count) {
    return result;
 }
 
+/* fcntl() without value */
 int Fcntl(int fd, int cmd) {
    int result, _errno;
    if (!diag_in_handler) diag_flush();
@@ -581,7 +582,8 @@ int Fcntl(int fd, int cmd) {
    Debug2("fcntl(%d, %d)", fd, cmd);
 #endif /* WITH_SYCLS */
    result = fcntl(fd, cmd);
-   if (!diag_in_handler) diag_flush();
+   if (!diag_in_handler)
+      diag_flush();
 #if WITH_SYCLS
    _errno = errno;
    Debug1("fcntl() -> 0x%x", result);
@@ -590,6 +592,25 @@ int Fcntl(int fd, int cmd) {
    return result;
 }
 
+/* fcntl() with int value */
+int Fcntl_i(int fd, int cmd, int arg) {
+   int result, _errno;
+   if (!diag_in_handler) diag_flush();
+#if WITH_SYCLS
+   Debug3("fcntl(%d, %d, 0x%x)", fd, cmd, arg);
+#endif /* WITH_SYCLS */
+   result = fcntl(fd, cmd, arg);
+   _errno = errno;
+   if (!diag_in_handler)
+      diag_flush();
+#if WITH_SYCLS
+   Debug1("fcntl() -> 0x%x", result);
+#endif /* WITH_SYCLS */
+   errno = _errno;
+   return result;
+}
+
+/* fcntl() with long value */
 int Fcntl_l(int fd, int cmd, long arg) {
    int result, _errno;
    if (!diag_in_handler) diag_flush();
@@ -598,7 +619,8 @@ int Fcntl_l(int fd, int cmd, long arg) {
 #endif /* WITH_SYCLS */
    result = fcntl(fd, cmd, arg);
    _errno = errno;
-   if (!diag_in_handler) diag_flush();
+   if (!diag_in_handler)
+      diag_flush();
 #if WITH_SYCLS
    Debug1("fcntl() -> 0x%x", result);
 #endif /* WITH_SYCLS */
